--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -15,5 +15,17 @@
             font-size: 24px;
             margin: 0;
         }
+        width: 50%;
+    }
+
+    .top-wrapper{
+        display:flex;
+    }
+
+    .search-container{
+        right: 0;
+        width: 40%;
+        //margin-top: 1.5%;
+        padding: 2%;
     }
 }
