--- a/frontend-friends/src/components/searchBar/searchBar.scss
+++ b/frontend-friends/src/components/searchBar/searchBar.scss
@@ -1,23 +1,36 @@
 @use "../../style/colors.scss";
 
 .placeholder-content{
-    //display: flex;
+    display: flex;
     width: 100%;
+    font-size: 1.4vw;
+    white-space: nowrap;
+
     
     .search-icon{
         color: colors.$placeholder-text;
         font-size: 18px;
         flex-direction: row;
-        //align-self: flex-end;
         margin-top: 13px;
         margin-right: 10px;
+        margin-left: -3%;
         line-height: 50px;
         pointer-events: none;
+        padding-top: 2px;
         cursor:text;
     }
 
     .text-field label{
+        flex-shrink: 3;
         width: 100%;
+        margin-top: 10px;
         margin-left: 2px;
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .placeholder-content{
+        font-size: 1.7vw;
     }
 }
