--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -1,9 +1,11 @@
+@use "../../style/colors.scss";
+
 .list-container {
     flex-grow: 1;
     background-color: white;
     margin-left: 40px;
     margin-right: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-radius: 6px;
     box-shadow: 5px 5px 15px #dee0e2;
     overflow: scroll;
@@ -27,5 +29,64 @@
         width: 40%;
         //margin-top: 1.5%;
         padding: 2%;
+    }
+
+
+}
+
+.case-list-page{
+    .pagination-wrapper{
+        display: flex;
+        justify-content: end;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-bottom: 40px;
+
+        & > p{
+           display: inline-block;
+           margin-right: 20px;
+        }
+    }
+    .pagination-switch-buttons {
+        align-self: end;
+        display: flex;
+        gap: 10px;
+        width: fit-content;
+
+        & > button {
+            all: unset;
+            width: 50px;
+            height: 50px;
+            background-color: colors.$switch-button-background;
+            border-radius: 6px;
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+    
+            &:hover{
+                background-color: colors.$switch-button-hover;
+            }
+        }
+    
+        & > .left {
+    
+            svg {
+                transform: rotate(0.5turn);
+            }
+        }
+    
+        & > .disabled {
+            background-color: colors.$switch-button-disabled-background;
+            pointer-events: none;
+            
+            svg {
+                path {
+                    fill: colors.$switch-button-disabled-icon;
+                }
+            }
+        }
     }
 }
