--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -35,7 +35,9 @@
 }
 
 .case-list-page{
+   
     .pagination-wrapper{
+        user-select: none;
         display: flex;
         justify-content: end;
         margin-left: 40px;
